Project is completed. Finished up on update portion for both genre and game.

--- a/Inventory Management/views/partials/navbar.ejs
+++ b/Inventory Management/views/partials/navbar.ejs
@@ -30,16 +30,12 @@
                     <li>
                       <a href="/game/create" class="block px-4 py-2 hover:bg-gray-500 dark:hover:bg-gray-600 dark:hover:text-white">Create Game</a>
                     </li>
-                    <li>
-                      <a href="#" class="block px-4 py-2 hover:bg-gray-500 dark:hover:bg-gray-600 dark:hover:text-white">Delete Game</a>
-                    </li>
-                    <li></li>
-                      <a href="#" class="block px-4 py-2 hover:bg-gray-500 dark:hover:bg-gray-600 dark:hover:text-white">Update Game</a>
-                    </li>
+                  
+            
                   </ul>
-                  <div class="py-1">
+                  <!-- <div class="py-1">
                     <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
-                  </div>
+                  </div> -->
               </div>
           </li>
           <li>
@@ -55,24 +51,19 @@
                   <li>
                     <a href="/genre/create" class="block px-4 py-2 hover:bg-gray-500 dark:hover:bg-gray-600 dark:hover:text-white">Create Genre</a>
                   </li>
-                  <li>
-                    <a href="#" class="block px-4 py-2 hover:bg-gray-500 dark:hover:bg-gray-600 dark:hover:text-white">Delete Genre</a>
-                  </li>
-                  <li></li>
-                    <a href="#" class="block px-4 py-2 hover:bg-gray-500 dark:hover:bg-gray-600 dark:hover:text-white">Update Genre</a>
-                  </li>
+                 
                 </ul>
-                <div class="py-1">
+                <!-- <div class="py-1">
                   <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
-                </div>
+                </div> -->
             </div>
         </li>
-          <li>
+          <!-- <li>
             <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
           </li>
           <li>
             <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
