--- a/Inventory Management/views/gamefiles/updategame.ejs
+++ b/Inventory Management/views/gamefiles/updategame.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<%- include('../partials/head.ejs')%>
+	<%- include("../partials/head.ejs") %>
 	<body>
-		<%- include('../partials/navbar.ejs') %> <%-
+		<%- include("../partials/navbar.ejs") %> <%-
 		include("../partials/flowbite.ejs") %>
 
 		<div>
 			<section class="bg-white dark:bg-gray-900">
 				<div class="py-8 px-4 mx-auto max-w-2xl lg:py-16">
 					<h2 class="mb-4 text-xl font-bold text-gray-900 dark:text-white">
-						Add a new game
+						Update Game
 					</h2>
-					<form action="/game" method="post">
+					<form action="/game/updategame/<%= uniqueGame.Game_ID %>" method="post">
 						<div class="grid gap-4 sm:grid-cols-2 sm:gap-6">
 							<div class="sm:col-span-2">
 								<label
@@ -26,6 +26,7 @@
 									class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
 									placeholder="Type game name"
 									required=""
+									value="<%= uniqueGame.title %>"
 								/>
 							</div>
 							<div class="sm:col-span-2">
@@ -40,6 +41,7 @@
 									id="release_date"
 									class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
 									required=""
+									value="<%= uniqueGame_date %>"
 								/>
 							</div>
 							<div class="w-full">
@@ -55,6 +57,7 @@
 									class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
 									placeholder="Game Developer"
 									required=""
+									value="<%= uniqueGame.developer %>"
 								/>
 							</div>
 
@@ -74,7 +77,7 @@
 									<option>Select genre</option>
 									<% for( let index = 0; index < genres.length; index++ ) { %>
 									<option value=<%= genres[index].genre_name %>
-										> <%= genres[index].genre_name %>
+										<%= genres[index].genre_name === uniqueGame_genre || (Array.isArray(uniqueGame_genre) && uniqueGame_genre.includes(genres[index].genre_name)) ? 'selected' : '' %> > <%= genres[index].genre_name %>
 									</option>
 									<% } %>
 								</select>
@@ -91,18 +94,20 @@
 									rows="8"
 									class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
 									placeholder="Your description here"
-								></textarea>
+									
+								><%= uniqueGame.description %></textarea>
 							</div>
 						</div>
 						<button
 							type="submit"
 							class="inline-flex items-center px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-blue-500 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-blue-700"
 						>
-							Add Game
+							Update Game
 						</button>
 					</form>
 				</div>
 			</section>
 		</div>
 	</body>
+	
 </html>
