--- a/MembersOnly/views/messages/createmessages.ejs
+++ b/MembersOnly/views/messages/createmessages.ejs
@@ -10,24 +10,24 @@
 					<h2 class="mb-4 text-xl font-bold text-gray-900 dark:text-white">
 						Add a new message
 					</h2>
-					<form action="/" method="post">
+					<form action="/messages/create" method="post">
 						<div class="grid gap-4 sm:grid-cols-2 sm:gap-6">
 							<div class="sm:col-span-2">
 								<label
 									for="name"
 									class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-									>Game Name</label
+									>Title</label
 								>
 								<input
 									type="text"
-									name="name"
+									name="title"
 									id="name"
 									class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-									placeholder="Type game name"
+									placeholder="Type message title"
 									required=""
 								/>
 							</div>
-							<div class="sm:col-span-2">
+							<!-- <div class="sm:col-span-2">
 								<label
 									for="release_date"
 									class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
@@ -40,8 +40,8 @@
 									class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
 									required=""
 								/>
-							</div>
-							<div class="w-full">
+							</div> -->
+							<!-- <div class="w-full">
 								<label
 									for="developer"
 									class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
@@ -55,20 +55,20 @@
 									placeholder="Game Developer"
 									required=""
 								/>
-							</div>
+							</div> -->
 
 							<div class="sm:col-span-2">
 								<label
-									for="description"
+									for="content"
 									class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-									>Description</label
+									>Content</label
 								>
 								<textarea
-									id="description"
-									name="description"
+									id="content"
+									name="content"
 									rows="8"
 									class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-									placeholder="Your description here"
+									placeholder="Your content here"
 								></textarea>
 							</div>
 						</div>
@@ -76,7 +76,7 @@
 							type="submit"
 							class="inline-flex items-center px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-blue-500 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-blue-700"
 						>
-							Add Game
+							Add Message
 						</button>
 					</form>
 				</div>
