--- a/MembersOnly/views/partials/head.ejs
+++ b/MembersOnly/views/partials/head.ejs
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link href="/css/appstyles.css" rel="stylesheet" />
 
 
     <title>Members Only | <%= title %></title>
