--- a/File Uploader/public/css/appstyles.css
+++ b/File Uploader/public/css/appstyles.css
@@ -13,8 +13,8 @@ html, body {
 }
 
 .display-headers {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr; */
     width: 100%;
 }
 
@@ -27,20 +27,58 @@ html, body {
     flex-grow: 1;
 }
 
-.display-folders-body{
-    display: flex;
-    flex-direction: column;
+.folder-item{
     width: 100%;
+    border: gray 2px solid;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 70% 30%;
 }
 
-.folder-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+/* For index page */
+.folder-item-index{
+    width: 100%;
     border: gray 2px solid;
     border-radius: 10px;
     padding: 10px;
     margin-top: 10px;
     
+    
 }
+
+.grid-container-atag{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+}
+
+/* End of index page */
+
+.display-folders-body{
+    width: 100%
+}
+
+
+.folder-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    
+}
+
+.folder-info {
+    flex: 1;
+    margin-right: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.folder-actions{
+    display: flex;
+    
+}
+
 
 /* Styling the breadcrumb */
