--- a/File Uploader/views/index.ejs
+++ b/File Uploader/views/index.ejs
@@ -6,40 +6,57 @@
 
     <div class="content">
 
-    <div class="display-headers">
-        <div>
-            Folder Name
-        </div>
-        <div>
-            Folder Size
-        </div>
-        <div>
-            Created
-        </div>
-    </div>
-        
-        
-                <% folderList.forEach(folder => { %>
-                
-                    <div class="display-folders-body">
-
-                        <a class="folder-container" href="/folder/<%= folder.id %>">
-                            <div class="foldername"><%= folder.folder_name %></div>
-                            <div class="foldersize"><%= folder.folder_size ? folder.folder_size : "-" %></div>
-                            <div class="foldercreatedtime"><%= moment(folder.createdAt).format("DD-MM-YYYY HH:mm:ss") %></div>
-                        </a>
 
 
+
+
+        <div class="folder-container">
+            <div class="grid grid-cols-3 display-headers" style="width: 70%">
+              <div class="header-item">Folder Name</div>
+              <div class="header-item">Folder Size</div>
+              <div class="header-item">Created</div>
+            </div>
+          
+            <div class="folder-list">
+              <% folderList.forEach(child => { %>
+                <div class="folder-item">
+                  <a href="/folder/<%= child.id %>" class="grid grid-cols-3">
+                    <div class="folder-name">
+                      <%= child.folder_name %>
                     </div>
-            
-            
-            
-                <% }) %>
-            
-        
+                    <div class="folder-size">
+                      <%= child.folder_size ? child.folder_size : "-" %>
+                    </div>
+                    <div class="folder-created-at">
+                      <%= moment(child.createdAt).format("DD-MM-YYYY HH:mm:ss") %>
+                    </div>
 
-    </div>
+                    
+                    
+                    
+                    
+                  </a>
+                 
+                  <div>
+                  <button type="button" onclick="editFolder(this)" data-modal-target="edit-folder-modal" data-modal-toggle="edit-folder-modal" data-folderid="<%= child.id %>" data-foldername="<%= child.folder_name %>" class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Edit</button>
+                    
+                  <button type="button" onclick="deleteFolder(this)" data-folderid="<%= child.id %>" data-foldername="<%= child.folder_name %>" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete</button>
+                 </div>
+
+                </div>
+              <% }) %>
+            </div>
+        </div>
+
+    <%- include('./partials/editFolderModal.ejs') %>
+    </div> 
     
+    <script>
+
+
+        
+        
+    </script>
 
 
 
