--- a/File Uploader/views/partials/breadcrumb.ejs
+++ b/File Uploader/views/partials/breadcrumb.ejs
@@ -1,11 +1,29 @@
 <nav class="flex breadcrumb" aria-label="Breadcrumb">
+
+
     <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-      <li class="inline-flex items-center">
-        <a href="#" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-          Home
-        </a>
-      </li>
-      <li>
+
+      <% completedBreadcrumb.forEach((element , index) => { %>
+
+        <li class="inline-flex items-center">
+          <a href="<%= element.folderlink %>" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+            <%= element.folderName %>
+          </a>
+        </li>
+
+        <% if (!(index === completedBreadcrumb.length - 1)) { %>
+
+          <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+         
+        <% } %>
+        
+      <% }) %>
+
+
+      
+      <!-- <li>
         <div class="flex items-center">
           <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
@@ -21,5 +39,11 @@
           <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Flowbite</span>
         </div>
       </li>
-    </ol>
+    </ol> -->
+
+
+
+
+
+
 </nav>
