--- a/File Uploader/views/partials/head.ejs
+++ b/File Uploader/views/partials/head.ejs
@@ -3,5 +3,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
 	<link href="/css/appstyles.css" rel="stylesheet" />
+	<script src="/js/script.js"></script>
 	<title>File Uploader <%= title %></title>
 </head>
