--- a/File Uploader/views/partials/filemodal.ejs
+++ b/File Uploader/views/partials/filemodal.ejs
@@ -6,7 +6,7 @@
             <!--Modal header -->
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
                 <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-                    Create New File
+                    Upload File
                 </h3>
                 <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-toggle="file-modal">
                     <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
@@ -16,7 +16,7 @@
                 </button>
             </div>
             <!-- Modal body -->
-            <form class="p-4 md:p-5">
+            <form class="p-4 md:p-5" method="post" action="/file/create" enctype="multipart/form-data">
                 <div class="grid gap-4 mb-4 grid-cols-2">
                     <!-- <div class="col-span-2">
                         <label for="foldername" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Folder Name</label>
@@ -28,8 +28,13 @@
                           </select>
                     </div> -->
                     <div class="col-span-2">
-                        <label for="filename" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
-                        <input type="text" name="filename" id="filename" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Type file name" required="">
+                        
+                    <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="file_input">Upload file</label>
+                    <input class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" id="file_input" type="file" name="fileUpload">
+                    <p class="mt-1 text-sm text-gray-500 dark:text-gray-300" id="file_input_help">SVG, PNG, JPG or GIF (MAX. 800x400px).</p>
+                    <% if(title === "Folder View") { %>
+                        <input type="hidden" name="parentDir" value="<%= currentDir %>">
+                        <% }%>
                     </div>
                     
                     
